k8s/overlays/dev/frontend-patch.yaml
# frontend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-hivebox
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: frontend-hivebox
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
